// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idが設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,11 +13,11 @@
      \\"estimator\\": false,
      \\"isActive\\": true,
      \\"timer\\": true,
    },
    \\"estimator\\": Object {
-     \\"id\\": null,
+     \\"id\\": 1234,
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 500,"
`;

exports[`resultを設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -14,11 +14,11 @@
      \\"isActive\\": true,
      \\"timer\\": true,
    },
    \\"estimator\\": Object {
      \\"id\\": null,
-     \\"result\\": \\"\\",
+     \\"result\\": \\"あらゆる現実を全て自分の方へねじ曲げたのだ\\",
    },
    \\"timer\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 500,
    },"
`;
